# CPU-Ray-Tracer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Camera.cpp  Camera.h  GeoObject.h  Light.cpp  Light.h  Loader.h  Plane.cpp  Plane.h  README.md  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Structs.h  main.cpp  myplanes.pov  mysimple.pov  mytest1.out  mytest2.out  planes.pov  raytrace.exe.stackdump  run.py  run.sh  tests.sh  unixtest.sh
res/: README.md  pbr_grid.pov  planes.pov  simp_cam0.pov  simp_cam1.pov  simp_cam2.pov  simp_cam3.pov  simple.pov  specular.pov  spheres.pov  ugly.pov
src/: .Box.h.swp  BRDF.cpp  BRDF.hpp  BoundingBox.cpp  BoundingBox.hpp  Box.cpp  Box.h  Box.hpp  BoxRenderable.cpp  BoxRenderable.hpp  Camera.cpp  Camera.h  Camera.hpp  Cone.cpp  Cone.h  Cone.hpp  GeoObject.h  GeoObject.hpp  Intersection.cpp  Intersection.h  Intersection.hpp  Light.cpp  Light.h  Light.hpp  Loader.cpp  Loader.h  Loader.hpp  Plane.cpp  Plane.h  Plane.hpp  Ray.cpp  Ray.h  Ray.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Scene.cpp  Scene.h  Scene.hpp  Sphere.cpp  (+11 more)
tests/: test1.args  test1.out  test10.args  test10.out  test11.args  test11.out  test12.args  test12.out  test13.args  test13.out  test14.args  test14.out  test15.args  test15.out  test2.args  test2.out  test3.args  test3.out  test4.args  test4.out  test5.args  test5.out  test6.args  test6.out  test7.args  test7.out  test8.args  test8.out  test9.args  test9.out
